k8s-gitops/overlays/prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tv-dashboard-prod
  labels:
    name: tv-dashboard-prod
    environment: prod
