k8s-gitops/overlays/prod/ingress-homelab-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tv-dashboard-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: public
  tls:
  - hosts:
    - tv-hub.navillasa.dev
    secretName: tv-hub-tls
  rules:
  - host: tv-hub.navillasa.dev
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 4000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
