k8s-gitops/overlays/prod/ingress-prod-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tv-dashboard-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: "tv-dashboard-ip"
    networking.gke.io/managed-certificates: "prod-tv-dashboard-ssl"
spec:
  rules:
  - host: tv-hub.navillasa.dev
    http:
      paths:
      - path: /monitoring
        pathType: Prefix
        backend:
          service:
            name: prod-grafana-direct
            port:
              number: 3000
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: prod-backend-service
            port:
              number: 4000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prod-frontend-service
            port:
              number: 80
  - host: prod.tv-hub.navillasa.dev
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: prod-backend-service
            port:
              number: 4000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prod-frontend-service
            port:
              number: 80
